# LAD2025

./: README.md
01_TerminalProject/: Makefile  Show.c
02_Multifile/: Makefile
03_Text/: randomize.sh
04_Debugging/: Makefile  expected1.txt  expected2.txt  range.c  test1.gdb  test2.gdb
05_Regexps/: Makefile  esub.c
05_Regexps/tests/: run_tests.sh  t01_simple.sh  t02_groups.sh  t03_errors.sh  t04_backslash.sh
05_Regexps/tests/expected/: t01.out  t02.out  t03.err  t04.out
05_Regexps/tests/inputs/: input1.txt
06_Tracing/: Makefile  move.c  protect.c
06_Tracing/tests/: run_tests.sh  t01_simple_ok.sh  t02_infile_not_exists.sh  t03_read_injected_error.sh  t04_write_injected_error.sh  t10_ld_preload_protect.sh
07_Environmental/: configure.ac
07_Environmental/src/: Makefile.am  rhasher.c
07_Environmental/tests/: Makefile.am  test-md5.sh  test-sha1.sh  test-tth.sh
08_I18n/: Makefile.am  configure.ac
08_I18n/po/: Makevars  POTFILES.in  ru.po
08_I18n/src/: Makefile.am  guess100.c
09_PatchDiff/: Makefile  maze_v1.c  maze_v1_to_v2.patch  maze_v2_to_v3.patch  maze_v3_to_v4.patch
10_LibTesting/: configure.ac
10_LibTesting/src/: Makefile.am  gmbuffer.c  gmbuffer.h
10_LibTesting/tests/: Makefile.am  test_gmbuffer.c
11_Documenting/: Doxyfile  Makefile  README.md  number-game.1  number-game.c
12_InstallPackaging/: Makefile.am  README.md  configure.ac
12_InstallPackaging/doc/: Doxyfile  Makefile.am  mainpage.md
12_InstallPackaging/lib/: Makefile.am  greet.c  greet.h
12_InstallPackaging/man/: Makefile.am  hello-greet.1
12_InstallPackaging/po/: Makevars  POTFILES.in  ru.po
12_InstallPackaging/src/: Makefile.am  hello-greet.c
12_InstallPackaging/tests/: Makefile.am  test_greet.c  test_i18n.c
